--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -45,7 +45,11 @@ jobs:
 
       - name: beta - version value from package.json
         if: inputs.tag == 'beta'
-        run: npm i -g json && echo "PACKAGE_VERSION=${{npx json -f package.json | json version}}" >> $GITHUB_ENV
+        run: npm i -g json 
+        
+      - name: beta - version value from package.json
+        if: inputs.tag == 'beta'
+        run: echo "PACKAGE_VERSION=${{ npx json -f package.json | json version }}" >> $GITHUB_ENV
 
       - name: Setup yarn
         if: inputs.package_manager == 'yarn'
