--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -49,7 +49,8 @@ jobs:
         
       - name: beta - version value from package.json
         if: inputs.tag == 'beta'
-        run: echo "PACKAGE_VERSION=${{ npx json -f package.json | json version }}" >> $GITHUB_ENV
+        run: json -f package.json | json version
+        # run: echo "PACKAGE_VERSION=${{ npx json -f package.json | json version }}" >> $GITHUB_ENV
 
       - name: Setup yarn
         if: inputs.package_manager == 'yarn'
