--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -49,9 +49,9 @@ jobs:
         
       - name: beta - version value from package.json
         if: inputs.tag == 'beta'
-        run: json -f package.json | json version >> $GITHUB_ENV
+        run: echo "PACKAGE_VERSION=${{ json -f package.json | json version }}-beta.${{ github.event.number }}" >> $GITHUB_ENV
         # run: echo "PACKAGE_VERSION=${{ npx json -f package.json | json version }}" >> $GITHUB_ENV
-
+      
       - name: Setup yarn
         if: inputs.package_manager == 'yarn'
         run: yarn install --frozen-lockfile
