--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -50,9 +50,12 @@ jobs:
       - name: beta - version value from package.json
         if: inputs.tag == 'beta'
         # run: echo "PACKAGE_VERSION=" json -f package.json | json version }}-beta.${{ github.event.number }}" >> $GITHUB_ENV
-        run: echo "PACKAGE_VERSION=" "$(json -f package.json | json version)" "-beta." "${{ github.event.number }}" >> $GITHUB_ENV
+        run: echo "PACKAGE_VERSION=$(json -f package.json | json version)-beta.${{ github.event.number }}" >> $GITHUB_ENV
         # run: echo "PACKAGE_VERSION=${{ npx json -f package.json | json version }}" >> $GITHUB_ENV
-      
+      - name: run package.json update for beta
+        if: inputs.tag == 'beta'
+        run: json -I -f package.json -e "this.version=\"${{ env.PACKAGE_VERSION }}\""
+ 
       - name: Setup yarn
         if: inputs.package_manager == 'yarn'
         run: yarn install --frozen-lockfile
