--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -70,30 +70,20 @@ jobs:
         node-version: latest
         cache: ${{ inputs.package_manager }}
 
-    - name: Create cli install command yarn
+    - name: Create environment variables for yarn commands
       if: inputs.package_manager == 'yarn'
-      run: echo "CLI_INSTALL=yarn install --frozen-lockfile" >> $GITHUB_ENV
+      run: |
+        echo "CLI_INSTALL=yarn install --frozen-lockfile" >> $GITHUB_ENV
+        echo "CLI_BUILD=yarn build" >> $GITHUB_ENV
+        echo "CLI_LINT=yarn lint" >> $GITHUB_ENV
     
-    - name: Create cli install command npm
+    - name: Create environment variables for npm commands
       if: inputs.package_manager == 'npm'
-      run: echo "CLI_INSTALL=npm ci" >> $GITHUB_ENV
-    
-    - name: Create cli build command yarn
-      if: inputs.package_manager == 'yarn'
-      run: echo "CLI_BUILD=yarn build" >> $GITHUB_ENV
-    
-    - name: Create cli build command npm
-      if: inputs.package_manager == 'npm'
-      run: echo "CLI_BUILD=npm run build" >> $GITHUB_ENV
-    
-    - name: Create cli lint command yarn
-      if: inputs.package_manager == 'yarn'
-      run: echo "CLI_LINT=yarn lint" >> $GITHUB_ENV
+      run: |
+        echo "CLI_INSTALL=npm ci" >> $GITHUB_ENV
+        echo "CLI_BUILD=npm run build" >> $GITHUB_ENV
+        echo "CLI_LINT=npm run lint" >> $GITHUB_ENV
       
-    - name: Create cli lint command npm
-      if: inputs.package_manager == 'npm'
-      run: echo "CLI_LINT=npm run lint" >> $GITHUB_ENV
-
     - name: Install dependencies
       run: ${{ env.CLI_INSTALL }}
 
@@ -103,7 +93,7 @@ jobs:
     - name: Lint app
       run: ${{ env.CLI_LINT }}
 
-    - name: Test yarn
+    - name: Test app
       run: ${{ inputs.package_manager }} test
 
     - name: Packr
