--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -27,7 +27,7 @@ env:
 
 jobs:
   npmjs:
-      name: Publish to npm
+      name: Publish to npmjs
       runs-on: ubuntu-latest
       steps: 
       - name: Retrieve build artifacts
