--- a/.github/workflows/yaml.linter.yml
+++ b/.github/workflows/yaml.linter.yml
@@ -2,16 +2,14 @@ name: 'Yamllint GitHub Actions'
 on:
   - pull_request
 jobs:
-  yamllint:
-    name: 'Yamllint'
+  lint-gha-files:
+    name: 'YAML linter'
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout'
-        uses: actions/checkout@master
-      - name: 'Yamllint'
-        uses: karancode/yamllint-github-action@master
+      - uses: actions/setup-node@v3
         with:
-          yamllint_strict: false
-          yamllint_comment: true
-        env:
-          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          node-version: 16
+      - name: 'install linter'
+        run: npm i -g yaml-lint
+      - name: 'Run linter'
+        run: yamllint *.yml
