--- a/.github/workflows/deploy.backend.stack.yml
+++ b/.github/workflows/deploy.backend.stack.yml
@@ -82,9 +82,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      
+
       - name: clean branch name for platter
-        run: echo echo "${{ github.head_ref }}" | tr -cd '[:alnum:]_-' >> $GITHUB_CLEANED_BRANCH
+        run: echo "${{ github.head_ref }}" | tr -cd '[:alnum:]_-' >> $GITHUB_CLEANED_BRANCH
         # Platter initialization and branch creation
         # pass in instantiated instance details to Google cloud for baking to Google Cloud Container
       - if: github.head_ref != 'production' && github.head_ref != 'main' && github.head_ref
