--- a/.github/workflows/deploy.backend.stack.yml
+++ b/.github/workflows/deploy.backend.stack.yml
@@ -91,9 +91,9 @@ jobs:
           
         # Platter initialization and branch creation
         # pass in instantiated instance details to Google cloud for baking to Google Cloud Container
-      - if: github.head_ref != 'production' && github.head_ref != 'main' && github.head_ref
-        name: Create Platter DB for branch
-        run: npx platter postgres branch create ${{ env.GITHUB_CLEANED_BRANCH }} --instance flexbase-api
+      #- if: github.head_ref != 'production' && github.head_ref != 'main' && github.head_ref
+      #  name: Create Platter DB for branch
+      #  run: npx platter postgres branch create ${{ env.GITHUB_CLEANED_BRANCH }} --instance flexbase-api
         
        # Google Cloud: Configure Workload Identity Federation and generate an access token.
       - id: 'auth'
